Refactor que mejora la lectura