@@ -10,6 +10,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import static org.apache.commons.lang3.StringUtils.EMPTY;
+
 @Slf4j
 @Component
 public class FrameFormatter {
@@ -17,13 +19,13 @@ public class FrameFormatter {
     public String format(Map<String, Object> fields, FrameConfig config) {
         List<Map.Entry<String, Object>> entries = new ArrayList<>(fields.entrySet());
 
-        entries = filterExcluded(entries, config);
-        entries = filterNullsAndBlanks(entries, config);
+        entries = this.filterExcluded(entries, config);
+        entries = this.filterNullsAndBlanks(entries, config);
 
         if (config.getOutputMode() == OutputMode.DUAL_LINE) {
-            return formatDualLine(entries, config);
+            return this.formatDualLine(entries, config);
         }
-        return formatSingleLine(entries, config);
+        return this.formatSingleLine(entries, config);
     }
 
     private List<Map.Entry<String, Object>> filterExcluded(
@@ -33,7 +35,7 @@ public class FrameFormatter {
         }
         return entries.stream()
                 .filter(e -> !config.getExcludedKeys().contains(e.getKey()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Map.Entry<String, Object>> filterNullsAndBlanks(
@@ -42,16 +44,16 @@ public class FrameFormatter {
                 .filter(e -> {
                     if (config.isSkipNulls() && e.getValue() == null) return false;
                     if (config.isSkipBlanks()) {
-                        String str = e.getValue() != null ? e.getValue().toString() : "";
+                        String str = e.getValue() != null ? e.getValue().toString() : EMPTY;
                         return !str.trim().isEmpty();
                     }
                     return true;
                 })
                 .toList();
-//                .collect(Collectors.toList());
     }
 
     private String formatSingleLine(List<Map.Entry<String, Object>> entries, FrameConfig config) {
+        // Revisar el escenario en donde sean el mismo valor y revisar la excepción a retornar
         if (config.getEntrySeparator().equals(config.getPairSeparator())) {
             throw new IllegalArgumentException(
                     "entrySeparator ('" + config.getEntrySeparator()
@@ -59,7 +61,7 @@ public class FrameFormatter {
                             + "') must differ");
         }
         return entries.stream()
-                .map(e -> e.getKey() + config.getPairSeparator() + valueToString(e.getValue()))
+                .map(e -> e.getKey() + config.getPairSeparator() + this.valueToString(e.getValue()))
                 .collect(Collectors.joining(config.getEntrySeparator()));
     }
 
@@ -68,13 +70,13 @@ public class FrameFormatter {
                 .map(Map.Entry::getKey)
                 .collect(Collectors.joining(config.getEntrySeparator()));
         String values = entries.stream()
-                .map(e -> valueToString(e.getValue()))
+                .map(e -> this.valueToString(e.getValue()))
                 .collect(Collectors.joining(config.getEntrySeparator()));
         return keys + "\n" + values;
     }
 
     private String valueToString(Object value) {
-        if (value == null) return "";
+        if (value == null) return EMPTY;
         return String.valueOf(value);
     }
 }
